--- a/index.html
+++ b/index.html
@@ -15,10 +15,29 @@
 <![endif]-->
 </head>
 <body>
-<div class="container-fluid" id="heading_div">
-<img id="profile_pic" src="images/profile.jpg" class="img-circle img-responsive" alt="Placeholder image">
-<h1 id="name_heading">REKHANSH<br>SINGHWAL</h1>
-</div>
+	<div class="container-fluid" id="heading_div">
+		<img id="profile_pic" src="images/profile.jpg" class="img-circle img-responsive" alt="Placeholder image">
+		<h1 id="name_heading">REKHANSH<br>SINGHWAL</h1>
+	</div>
+	<div class="container-fluid" id="education">
+		<div class="heading">Education</div>
+		<div class="education_div">
+			<div class="education_heading" >Mechanical Engineering</div>
+			<div class="education_year">2014-2018</div>
+			<div class="education_school">IIT (ISM), Dhanbad</div>
+		</div>
+		<div class="education_div">
+			<div class="education_heading">XII (Senior Secondary), Science</div>
+			<div class="education_year">2012-2013</div>
+			<div class="education_school">Taigore Public Sr Sec School, Kherli</div>
+			
+		</div>	
+		<div class="education_div">
+			<div  class="education_heading">X (Secondary)</div>
+			<div class="education_year">2010-2011</div>
+			<div class="education_school">Abhay Vidhya Mandir, Kherli</div>
+		</div></div>	
+	
 <script src="js/jquery-1.11.3.min.js"></script>
 <script src="js/bootstrap.js"></script>
 </body>
