--- a/index.html
+++ b/index.html
@@ -37,6 +37,137 @@
 			<div class="education_year">2010-2011</div>
 			<div class="education_school">Abhay Vidhya Mandir, Kherli</div>
 		</div></div>	
+	<div class="container-fluid">
+		<div class="heading" id="skills">Skills</div>
+		<div class="row" id="skill_box">
+			<div class="col-sm-4">
+				<li>HTML</li>
+				<li>CSS</li>
+				<li>JavaScript</li>
+				<li>XML</li>
+				<li>PHP</li>
+			</div>
+			<div class="col-sm-4">
+				<li>Android</li>
+				<li>SQLite</li>
+				<li>SQL</li>
+				<li>Adobe After Effects</li>
+				<li>Adobe Dreamweaver</li>
+			</div>
+			<div class="col-sm-4">
+				<li>Adobe Illustrator</li>
+				<li>Adobe Photoshop</li>
+				<li>AutoCAD</li>
+				<li>SolidWorks</li>
+				<li>MATLAB</li>
+			</div>
+		</div>
+		
+		
+		
+	
+	</div>
+	
+	<div class="container-fluid">
+		<div class="heading" id="projects">Projects</div>
+		<div class="row" id="project_box">
+			<div class="col-sm-6">
+				<div class="projects"><a href="https://sites.google.com/view/birthday--calendar" class="btn btn-info " target="_blank" style="float: right"><span class="glyphicon glyphicon-info-sign" aria-hidden="true"></span></a>
+					<div class="project_title">Birthdays &amp; Wishes</div>
+			  <li>Developed Using SQLite database and Firebase Real-time database.</li>
+				<li>Published on Google Play Store.
+				</li>
+				<li>350+ Downloads.</li></div>
+			
+		  </div>
+			<div class="col-sm-6">
+				<div class="projects"><a href="https://rekhansh.github.io/GetMax" target="_blank" class="btn btn-info " style="float: right"><span class="glyphicon glyphicon-info-sign" aria-hidden="true"></span></a>
+					<div class="project_title">GetMax</div>
+				<li>Developed an android game app from scratch.</li>
+				<li>Published on Google Play Store.</li>
+				<li>Simple Design.</li></div>
+			</div>
+		
+		</div>
+	</div>
+
+	<div class="container-fluid">
+		<div class="heading" id="contact" >Contact</div>
+		<div id="contact_details">
+			<a href="https://www.youtube.com/channel/UCtS8UZtOhkVSvhyyr0DPsZA" target="_blank">
+			<svg version="1.1" height="45px" width="45px">
+				<title>Youtube</title>
+				<rect fill="#FF0000" width="45" height="45"/>
+				<path fill="#FFFFFF" d="M33.5,17.2c-0.3-1-1-1.8-2-2c-1.8-0.5-8.9-0.5-8.9-0.5s-7.1,0-8.9,0.5c-1,0.3-1.7,1-2,2
+					c-0.5,1.8-0.5,5.5-0.5,5.5s0,3.7,0.5,5.5c0.3,1,1,1.8,2,2c1.8,0.5,8.9,0.5,8.9,0.5s7.1,0,8.9-0.5c1-0.3,1.7-1,2-2
+			c0.5-1.8,0.5-5.5,0.5-5.5S34,18.9,33.5,17.2z"/>
+<polygon fill="#FF0000" points="20.2,26 26.2,22.7 20.2,19.3 "/>
+		</svg></a>
+		<a href="https://www.facebook.com/rekhansh.singhwal" target="_blank">
+			<svg version="1.1" height="45px" width="45px">
+		<title>Facebook</title>
+<rect fill="#3C5A99" width="45" height="45"/>
+<path fill="#FFFFFF" d="M27.2,35C27.2,35,27.2,35,27.2,35l0-9.7h3.2l0.5-3.8h-3.7v-2.4c0-1.1,0.3-1.8,1.9-1.8h2v-3.4
+	c-1-0.1-1.9-0.2-2.9-0.1c-2.9,0-4.9,1.8-4.9,5v2.8h-3.3v3.8h3.3V35h0c-5.8,0-12,0-12,0c-0.8,0-1.4-0.6-1.4-1.4V11.4
+	c0-0.8,0.6-1.4,1.4-1.4h22.2c0.8,0,1.4,0.6,1.4,1.4v22.2c0,0.8-0.6,1.4-1.4,1.4C33.6,35,30.9,35,27.2,35"/>
+</svg></a>
+		<a href="https://twitter.com/AnshRekh" target="_blank">
+	<svg version="1.1"  width="45" height="45" >
+<rect y="0" fill="#1DA1F2" width="45" height="45"/>
+<title>Twitter</title>
+<path fill="#FFFFFF" d="M19.6,28.9c5.9,0,9.1-4.9,9.1-9.1c0-0.1,0-0.3,0-0.4c0.6-0.5,1.2-1,1.6-1.7c-0.6,0.3-1.2,0.4-1.8,0.5
+		c0.7-0.4,1.2-1,1.4-1.8c-0.6,0.4-1.3,0.6-2,0.8c-1.2-1.3-3.2-1.4-4.5-0.1c-0.8,0.8-1.2,2-0.9,3.1c-2.6-0.1-5-1.3-6.6-3.4
+		c-0.9,1.5-0.4,3.3,1,4.3c-0.5,0-1-0.2-1.5-0.4c0,0,0,0,0,0c0,1.5,1.1,2.8,2.6,3.1c-0.5,0.1-1,0.1-1.4,0.1c0.4,1.3,1.6,2.2,3,2.2
+		c-1.1,0.9-2.5,1.4-4,1.4c-0.3,0-0.5,0-0.8,0C16.2,28.4,17.9,28.9,19.6,28.9"/>
+	<rect x="10" y="10" fill="none" width="25" height="25"/>
+</svg></a>
+		
+		<a href="https://www.instagram.com/rekhansh_" target="_blank">
+				
+		<svg version="1.1" width="45" height="45">
+		
+			<rect fill="#93278F" width="45" height="45"/>
+<path fill="#FFFFFF" d="M22.5,12.5c3.3,0,3.7,0,5.1,0.1c1.2,0.1,1.9,0.3,2.3,0.4c0.6,0.2,1,0.5,1.4,0.9c0.4,0.4,0.7,0.9,0.9,1.4
+	c0.2,0.4,0.4,1.1,0.4,2.3c0.1,1.3,0.1,1.7,0.1,5s0,3.7-0.1,5c-0.1,1.2-0.3,1.9-0.4,2.3c-0.2,0.6-0.5,1-0.9,1.4
+	c-0.4,0.4-0.9,0.7-1.4,0.9c-0.4,0.2-1.1,0.4-2.3,0.4c-1.3,0.1-1.7,0.1-5.1,0.1s-3.7,0-5.1-0.1c-1.2-0.1-1.9-0.3-2.3-0.4
+	c-0.6-0.2-1-0.5-1.4-0.9C13.3,31,13,30.6,12.8,30c-0.2-0.4-0.4-1.1-0.4-2.3c-0.1-1.3-0.1-1.7-0.1-5s0-3.7,0.1-5
+	c0.1-1.2,0.3-1.9,0.4-2.3c0.2-0.6,0.5-1,0.9-1.4c0.4-0.4,0.9-0.7,1.4-0.9c0.4-0.2,1.1-0.4,2.3-0.4C18.8,12.5,19.2,12.5,22.5,12.5
+	 M22.5,10.2c-3.4,0-3.8,0-5.2,0.1c-1.3,0.1-2.2,0.3-3,0.6c-0.8,0.3-1.5,0.7-2.2,1.4c-0.7,0.7-1.1,1.4-1.4,2.2
+	c-0.3,0.8-0.5,1.7-0.6,3C10,18.9,10,19.3,10,22.7c0,3.4,0,3.8,0.1,5.1c0.1,1.3,0.3,2.2,0.6,3c0.3,0.8,0.7,1.5,1.4,2.2
+	c0.7,0.7,1.4,1.1,2.2,1.4c0.8,0.3,1.7,0.5,3,0.6c1.3,0.1,1.8,0.1,5.2,0.1s3.8,0,5.2-0.1c1.3-0.1,2.2-0.3,3-0.6
+	c0.8-0.3,1.5-0.7,2.2-1.4c0.7-0.7,1.1-1.4,1.4-2.2c0.3-0.8,0.5-1.7,0.6-3c0.1-1.3,0.1-1.8,0.1-5.1s0-3.8-0.1-5.1
+	c-0.1-1.3-0.3-2.2-0.6-3c-0.3-0.8-0.7-1.5-1.4-2.2c-0.7-0.7-1.4-1.1-2.2-1.4c-0.8-0.3-1.7-0.5-3-0.6C26.3,10.2,25.9,10.2,22.5,10.2
+	L22.5,10.2z"/>
+<path fill="#FFFFFF" d="M22.5,16.3c-3.5,0-6.4,2.9-6.4,6.4s2.9,6.4,6.4,6.4s6.4-2.9,6.4-6.4S26.1,16.3,22.5,16.3z M22.5,26.8
+	c-2.3,0-4.2-1.9-4.2-4.2s1.9-4.2,4.2-4.2s4.2,1.9,4.2,4.2S24.8,26.8,22.5,26.8z"/>
+<ellipse fill="#FFFFFF" cx="29.2" cy="16" rx="1.5" ry="1.5"/>		</svg></a>
+			
+		<a href="https://github.com/rekhansh" target="_blank">
+<svg version="1.1" width="45" height="45">
+<style type="text/css">
+	.st0{fill-rule:evenodd;clip-rule:evenodd;fill:#181616;}
+	.st1{fill-rule:evenodd;clip-rule:evenodd;fill:#FFFFFF;}
+</style>
+<rect class="st0" width="45" height="45"/>
+<path class="st1" d="M22.5,10.3c-6.9,0-12.5,5.6-12.5,12.5c0,5.5,3.6,10.2,8.5,11.9c0.6,0.1,0.9-0.3,0.9-0.6c0-0.3,0-1.1,0-2.1
+	c-3.5,0.8-4.2-1.7-4.2-1.7c-0.6-1.4-1.4-1.8-1.4-1.8c-1.1-0.8,0.1-0.8,0.1-0.8c1.3,0.1,1.9,1.3,1.9,1.3c1.1,1.9,2.9,1.4,3.6,1
+	c0.1-0.8,0.4-1.4,0.8-1.7c-2.8-0.3-5.7-1.4-5.7-6.2c0-1.4,0.5-2.5,1.3-3.4c-0.1-0.3-0.6-1.6,0.1-3.3c0,0,1-0.3,3.4,1.3
+	c1-0.3,2.1-0.4,3.1-0.4c1.1,0,2.1,0.1,3.1,0.4c2.4-1.6,3.4-1.3,3.4-1.3c0.7,1.7,0.3,3,0.1,3.3c0.8,0.9,1.3,2,1.3,3.4
+	c0,4.8-2.9,5.9-5.7,6.2c0.4,0.4,0.8,1.1,0.8,2.3c0,1.7,0,3,0,3.4c0,0.3,0.2,0.7,0.9,0.6c5-1.7,8.5-6.3,8.5-11.9
+	C35,15.9,29.4,10.3,22.5,10.3z"/>
+</svg>
+</a>
+<a href="https://linkedin.com/in/rekhansh-singhwal" target="_blank">
+	<svg version="1.1" height="45px" width="45px">
+<rect fill="#006699" width="45" height="45"/>
+<path fill="#FFFFFF" d="M10.4,18.3h5.2V35h-5.2V18.3z M13,10c1.7,0,3,1.3,3,3c0,1.7-1.3,3-3,3c-1.7,0-3-1.3-3-3C10,11.4,11.3,10,13,10"
+	/>
+<path fill="#FFFFFF" d="M18.8,18.3h5v2.3h0.1c0.7-1.3,2.4-2.7,4.9-2.7c5.2,0,6.2,3.5,6.2,7.9V35h-5.2v-8.1c0-1.9,0-4.4-2.7-4.4
+	c-2.7,0-3.1,2.1-3.1,4.3V35h-5.2V18.3z"/>
+</svg></a>
+		</div>
+</div>
+	
 	
 <script src="js/jquery-1.11.3.min.js"></script>
 <script src="js/bootstrap.js"></script>
